# shader-sense

./: Cargo.toml  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: build.yml  deploy.yml
shader-intrinsic-parser/: Cargo.toml
shader-intrinsic-parser/src/: common.rs  main.rs
shader-intrinsic-parser/src/glsl/: extensions.rs  keywords.rs  macros.rs  methods.rs  mod.rs  types.rs
shader-intrinsic-parser/src/hlsl/: functions.rs  macros.rs  mod.rs  semantics.rs  types.rs
shader-intrinsic-parser/src/slang/: mod.rs
shader-intrinsic-parser/src/wgsl/: mod.rs
shader-language-server/: CHANGELOG.md  Cargo.toml
shader-language-server/src/: lib.rs  main.rs  server.rs
shader-language-server/src/server/: completion.rs  document_symbol.rs  goto.rs  hover.rs  inlay_hint.rs  semantic_token.rs  server_config.rs  server_file_cache.rs  server_language_data.rs  shader_variant.rs  signature.rs  workspace_symbol.rs
shader-language-server/tests/: automatic_variant_discovery.rs  glsl_dependency_diagnostics.rs  server_communication.rs  test_server.rs
shader-sense/: Cargo.toml
shader-sense-cli/: Cargo.toml
shader-sense-cli/src/: main.rs
shader-sense/examples/: main.rs
shader-sense/src/: include.rs  lib.rs  shader.rs
shader-sense/src/symbols/: intrinsics.rs  mod.rs  prepocessor.rs  shader_language.rs  shader_module.rs  shader_module_parser.rs  symbol_list.rs  symbol_parser.rs  symbol_provider.rs  symbol_tree.rs  symbols.rs
shader-sense/src/validator/: dxc.rs  glslang.rs  mod.rs  naga.rs  slang.rs  validator.rs
(+30 files in other folders)
