[workspace]

members = [
    "shader-sense",
    "shader-language-server",
    "shader-sense-cli",
    "shader-intrinsic-parser"
]
resolver = "2"

# For profiling. Build with:
# cargo build --profile=release-with-debug
# And attach server with vs or any debugger
[profile.release-with-debug]
inherits = "release"
debug = true


[patch.crates-io]
tree-sitter-wgsl-bevy = { git = "https://github.com/antaalt/tree-sitter-wgsl-bevy", branch = "fix-compil-clang" }